--- a/src/assets/css/sbs-1278.css
+++ b/src/assets/css/sbs-1278.css
@@ -223,4 +223,114 @@
         right: 50%;
         top: 0;
     }
+}
+
+#about {
+    padding: var(--sectionPadding);
+    background-color: #F7F7F7;
+    position: relative;
+}
+
+#about .cs-container {
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3.25rem;
+}
+
+#about .cs-content {
+    width: 100%;
+    max-width: 33.875rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#about .cs-title {
+    font-size: var(--headerFontSize);
+    font-weight: 900;
+    line-height: 1.2em;
+    text-align: left;
+    margin: 0 0 1rem 0;
+    color: var(--headerColor);
+    position: relative;
+}
+
+#about .cs-text {
+    font-size: var(--bodyFontSize);
+    line-height: 1.5em;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 1rem;
+    color: var(--bodyTextColor);
+}
+
+#about .cs-text:last-of-type {
+    margin-bottom: 0;
+}
+
+#about .cs-picture {
+    width: 100%;
+    max-width: 40.625rem;
+    height: auto;
+    display: block;
+    position: relative;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+#about .cs-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #about {
+        padding: var(--sectionPadding);
+    }
+
+    #about .cs-container {
+        flex-direction: column;
+    }
+
+    #about .cs-picture {
+        /* height for mobile */
+        height: 25rem;
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #about .cs-picture {
+        /* height for tablet */
+        height: 30rem;
+    }
+}
+
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #about .cs-container {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    #about .cs-content {
+        width: 50%;
+        margin: 0;
+    }
+
+    #about .cs-picture {
+        width: 45%;
+        /* height for desktop */
+        height: 35rem;
+    }
 } 
